# axum_template

./: Cargo.toml
config/: default.json
src/: app.rs  database.rs  errors.rs  logger.rs  main.rs  settings.rs
src/models/: user.rs
src/routes/: status.rs  user.rs
src/tests/: mod.rs  setup.rs  utils.rs
src/tests/routes/: user.rs
src/utils/: custom_response.rs  date.rs  mod.rs  models.rs  token.rs
