[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
axum = "0.8.1"
once_cell = "1.21.0"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.26"
tower-http = { version = "0.6", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
tracing = "0.1.41"
thiserror = "2.0.12"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
async-trait = "0.1.87"
bytes = "1.10.1"
mime = "0.3.17"
bson = { version = "2.14.0", features = ["serde_with", "chrono-0_4"] }
chrono = "0.4.40"
validator = { version = "0.20.0", features = ["derive"] }
validator_derive = "0.20.0"
bcrypt = "0.17.0"
